[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ali Madad", email = "ali@scty.org" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
