[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ali Madad", email = "ali@scty.org" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "kuzu>=0.4.2",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
